[package]
name = "m2m"
description = "A chat server providing the Matrix protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
figment.workspace = true
matrix.workspace = true
rocket.workspace = true
routes.workspace = true
serde.workspace = true
services.workspace = true
thiserror.workspace = true

[workspace]
members = ["matrix", "routes", "services"]

[workspace.dependencies]
anyhow = "1"
figment = { version = "0.10" }
log = { version = "0.4", features = [
    "kv_std",
    "kv_serde",
    "release_max_level_info",
] }
matrix = { path = "./matrix" }
rocket = { version = "0.5", features = ["json"] }
routes = { path = "./routes" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
services = { path = "./services" }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "derive",
    "migrate",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
